client/src/index.css
body {
  /*margin: 0;*/
  /*padding: 0;*/
  /*font-family: sans-serif;*/
}
input:-webkit-autofill {
    -webkit-box-shadow: 0 0 0px 1000px white inset;
}
textarea {
    outline: none;
}

.grommetux-form-field__contents {
    margin-right: 24px;
}

